mobile view header text shadow fix
it was too far apart in small view.

--- a/css/master.css
+++ b/css/master.css
@@ -11,7 +11,7 @@ body {
 }
 .image {
   display: block;
-  width: 100%;
+  width: 100% !important;
   height: auto;
 }
 
@@ -90,6 +90,7 @@ p {
       }
     h1 {
         font-size: 2.5em !important;
+        text-shadow: 2px 2px tomato;
     }
     .container {
       min-height: 100% !important;
